IssueNo: https://gitcode.com/openharmony/applications_app_samples/issues/6574 Description: 添加ArkWeb进程指南、优化跳转至新Web组件过程中的页面闪烁现象指南、Web页面显示内容滚动指南的代码片段 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huyingtao <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkWeb/WebScrollDemo/entry/src/main/resources/rawfile/scroll_demo.html
+++ b/code/DocsSample/ArkWeb/WebScrollDemo/entry/src/main/resources/rawfile/scroll_demo.html
@@ -87,7 +87,7 @@
 <div class="scroll-info" id="scrollInfo">滚动位置: 0px</div>
 //js侧5个代码片段
 <div class="section">
-    <button class="scroll-btn" id="scrollBy0200">向下滚动 ↓</button>
+    <button class="scroll-btn" id="scrollBy0200">Scroll down ↓</button>
     <script>
         const deltaX = 0;
         const deltaY = 200;
@@ -98,7 +98,7 @@
         });
     </script>
 
-    <button class="scroll-btn" id="scrollTo0400">滚动到400px ↓</button>
+    <button class="scroll-btn" id="scrollTo0400">Scroll to 400px ↓</button>
     <script>
         const x = 0;
         const y = 400;
@@ -109,7 +109,7 @@
         });
     </script>
 
-    <button class="scroll-btn" id="scrollTo0">返回顶部</button>
+    <button class="scroll-btn" id="scrollTo0">Back to top</button>
     <script>
         document.getElementById('scrollTo0').addEventListener('click', ()=>{
             // [Start scrollTo_js_five]
@@ -118,7 +118,7 @@
         });
     </script>
 
-    <button class="scroll-btn" id="scrollTo0500">跳转到页面特定位置：500px ↓</button>
+    <button class="scroll-btn" id="scrollTo0500">Jump to a specific location：500px ↓</button>
     <script>
         document.getElementById('scrollTo0500').addEventListener('click', ()=>{
             // [Start scrollTo_js_six]
