IssueNo: https://gitcode.com/openharmony/applications_app_samples/issues/6574 Description: 添加ArkWeb进程指南、优化跳转至新Web组件过程中的页面闪烁现象指南、Web页面显示内容滚动指南的代码片段 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huyingtao <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkWeb/WebScrollDemo/entry/src/main/resources/rawfile/scroll_demo.html
+++ b/code/DocsSample/ArkWeb/WebScrollDemo/entry/src/main/resources/rawfile/scroll_demo.html
@@ -183,6 +183,11 @@
         document.getElementById('scrollInfo').textContent =
             `滚动位置: ${scrollY}px`;
     });
+
+    // 页面加载完成
+    window.addEventListener('load', function() {
+        console.log('页面加载完成');
+    });
 </script>
 </body>
 </html>
