--- a/code/DocsSample/ArkWeb/WebFocusManagement/entry/src/main/resources/rawfile/test.html
+++ b/code/DocsSample/ArkWeb/WebFocusManagement/entry/src/main/resources/rawfile/test.html
@@ -11,18 +11,18 @@
 </form>
 </body>
 <script>
-    const form = document.getElementById("form");
+    const form = document.getElementById('form');
     form.addEventListener(
-      "focus",
+      'focus',
       (event) => {
-        event.target.style.background = "pink";
+        event.target.style.background = 'pink';
       },
       true,
     );
     form.addEventListener(
-      "blur",
+      'blur',
       (event) => {
-        event.target.style.background = "";
+        event.target.style.background = '';
       },
       true,
     );
