IssueNo: https://gitcode.com/openharmony/applications_app_samples/issues/6657 Description: 添加使用Web组件显示网页弹框指南、使用Web组件的拖拽功能与网页交互指南的代码片段 Sig: SIG_Sample Feature or Bugfix: Feature Binary Source: No
Signed-off-by: huyingtao <tianlong18@h-partners.com>

--- a/code/DocsSample/ArkWeb/ShowWebPageDialog/entry/src/main/resources/rawfile/alert.html
+++ b/code/DocsSample/ArkWeb/ShowWebPageDialog/entry/src/main/resources/rawfile/alert.html
@@ -18,7 +18,7 @@
 <button onclick="handleAlert()">alert</button><br/>
 <script>
     function handleAlert() {
-        let message = document.getElementById("alert-message").value;
+        let message = document.getElementById('alert-message').value;
         let result = window.alert(message ? message : 'alert');
     }
 </script>
