--- a/code/DocsSample/ArkWeb/ShowWebPageDialog/entry/src/main/resources/rawfile/test.html
+++ b/code/DocsSample/ArkWeb/ShowWebPageDialog/entry/src/main/resources/rawfile/test.html
@@ -18,7 +18,7 @@
 <button onclick="handleAlert()">alert</button><br/>
 <script>
     function handleAlert() {
-        let message = document.getElementById("alert-message").value;
+        let message = document.getElementById('alert-message').value;
         let result = window.alert(message ? message : 'alert');
     }
 </script>
