--- a/code/DocsSample/ArkWeb/ManageWebCompSecPriv/entry/src/main/resources/resfile/index.html
+++ b/code/DocsSample/ArkWeb/ManageWebCompSecPriv/entry/src/main/resources/resfile/index.html
@@ -26,8 +26,8 @@
       // 使用file协议通过XMLHttpRequest跨域访问本地js文件。
             const xmlHttpReq = new XMLHttpRequest();
             xmlHttpReq.onreadystatechange = function() {
-                console.log('readyState:' + xmlHttpReq.readyState);
-                console.log('status:' + xmlHttpReq.status);
+                console.info('readyState:' + xmlHttpReq.readyState);
+                console.info('status:' + xmlHttpReq.status);
                 if (xmlHttpReq.readyState === 4) {
                     if (xmlHttpReq.status === 200) {
                 // 如果ets侧正确设置路径列表，则此处能正常获取资源
@@ -48,7 +48,7 @@
 
 <body>
 <div class='page'>
-    <button id='example' onclick='getFile()'>stealFile</button>
+    <button id='example' onclick='getFile()'>loadFile</button>
 </div>
 <div id='text'></div>
 </body>
