--- a/code/DocsSample/ArkWeb/UseFrontendJSApp/entry/src/main/resources/rawfile/index.html
+++ b/code/DocsSample/ArkWeb/UseFrontendJSApp/entry/src/main/resources/rawfile/index.html
@@ -16,21 +16,24 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
 <button type='button' onclick='callArkTS()'>Click Me!</button>
-<h1 id='text'>这是一个测试信息，默认字体为黑色，调用runJavaScript方法后字体为绿色，调用runJavaScriptCodePassed方法后字体为红色</h1>
+<h1 id='text'>这是一个测试信息，默认字体为黑色，调用runJavaScript方法后字体为黄色、调用runJavaScriptParam方法后字体为绿色、调用runJavaScriptCodePassed方法后字体为红色</h1>
 <script>
-    // 调用有参函数时实现。
+    // 有参函数。
     let param = 'param: JavaScript Hello World!';
-    function htmlTest(param) {
+    function htmlTestParam(param) {
         document.getElementById('text').style.color = 'green';
         console.log(param);
     }
-    // 调用无参函数时实现。
+    // 无参函数。
     function htmlTest() {
-        document.getElementById('text').style.color = 'green';
+        document.getElementById('text').style.color = 'yellow';
     }
-    // Click Me！触发前端页面callArkTS()函数执行JavaScript传递的代码。
+    // 点击“Click Me！”按钮，触发前端页面callArkTS()函数执行JavaScript传递的代码。
     function callArkTS() {
         changeColor();
     }
