--- a/code/DocsSample/ArkWeb/ManageWebPageFileIO/entry/src/main/resources/rawfile/local.html
+++ b/code/DocsSample/ArkWeb/ManageWebPageFileIO/entry/src/main/resources/rawfile/local.html
@@ -16,13 +16,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
     <title>Document</title>
 </head>
 
 <body>
 <!-- 点击上传文件按钮 -->
-<input type='file' value='file'></br>
-<meta name='viewport' content='width=device-width' />
+<input type="file"><br>
 </body>
 </html>
