--- a/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/getLocation.html
+++ b/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/getLocation.html
@@ -14,21 +14,27 @@
 */-->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>位置信息</title>
+</head>
 <body>
-<p id='locationInfo'>位置信息</p>
-<button onclick='getLocation()'>获取位置</button>
-<script>
-    let locationInfo=document.getElementById('locationInfo');
-    function getLocation() {
-      if (navigator.geolocation) {
-        <!-- 前端页面访问设备地理位置 -->
-        navigator.geolocation.getCurrentPosition(showPosition);
-      }
-    }
-    function showPosition(position) {
-      locationInfo.innerHTML='Latitude: ' + position.coords.latitude + '<br />Longitude: ' + position.coords.longitude;
-    }
-</script>
+    <p id="locationInfo">位置信息</p>
+    <button onclick="getLocation()">获取位置</button>
+
+    <script>
+        var locationInfo=document.getElementById("locationInfo");
+        function getLocation(){
+            if (navigator.geolocation) {
+                // 访问设备地理位置
+                navigator.geolocation.getCurrentPosition(showPosition);
+            }
+        }
+        function showPosition(position){
+            locationInfo.innerHTML="Latitude: " + position.coords.latitude + "<br />Longitude: " + position.coords.longitude;
+        }
+    </script>
 </body>
 </html>
