--- a/code/DocsSample/ArkWeb/ManageWebPageInteracts/entry/src/main/resources/rawfile/index.html
+++ b/code/DocsSample/ArkWeb/ManageWebPageInteracts/entry/src/main/resources/rawfile/index.html
@@ -13,51 +13,52 @@
 * limitations under the License.
 */-->
 
-<!DOCTYPE html>
-<html>
+<!-- index.html -->
+    <!DOCTYPE html>
+    <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0">
+    </head>
 
-<body>
+    <body>
 
-<p style="font-size:12px">input标签，原有默认行为：</p>
-<input type="text" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，原有默认行为：</p>
+    <input type="text" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key UNSPECIFIED：</p>
-<input type="text" keyboard-return="UNSPECIFIED" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key UNSPECIFIED：</p>
+    <input type="text" keyboard-return="UNSPECIFIED" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key GO：</p>
-<input type="text" keyboard-return="GO" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key GO：</p>
+    <input type="text" keyboard-return="GO" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key SEARCH：</p>
-<input type="text" keyboard-return="SEARCH" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key SEARCH：</p>
+    <input type="text" keyboard-return="SEARCH" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key SEND：</p>
-<input type="text" keyboard-return="SEND" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key SEND：</p>
+    <input type="text" keyboard-return="SEND" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key NEXT：</p>
-<input type="text" keyboard-return="NEXT" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key NEXT：</p>
+    <input type="text" keyboard-return="NEXT" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key DONE：</p>
-<input type="text" keyboard-return="DONE" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key DONE：</p>
+    <input type="text" keyboard-return="DONE" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key PREVIOUS：</p>
-<input type="text" keyboard-return="PREVIOUS" style="width: 300px; height: 20px"><br>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+    <p style="font-size:12px">input标签，系统键盘自定义enterKeyType属性 enter key PREVIOUS：</p>
+    <input type="text" keyboard-return="PREVIOUS" style="width: 300px; height: 20px"><br>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<p style="font-size:12px">input标签，应用自定义键盘：</p>
-<input type="text" data-keyboard="customKeyboard" style="width: 300px; height: 20px"><br>
+    <p style="font-size:12px">input标签，应用自定义键盘：</p>
+    <input type="text" data-keyboard="customKeyboard" style="width: 300px; height: 20px"><br>
 
-</body>
+    </body>
 
-</html>
+    </html>
