--- a/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/getLocation.html
+++ b/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/getLocation.html
@@ -25,7 +25,7 @@
     <button onclick="getLocation()">获取位置</button>
 
     <script>
-        let locationInfo = document.getElementById("locationInfo");
+        let locationInfo = document.getElementById('locationInfo');
         function getLocation() {
             if (navigator.geolocation) {
                 // 访问设备地理位置
