sample doc same origin
Signed-off-by: quyue00807312 <quyue5@huawei.com>

--- a/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/window.html
+++ b/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/window.html
@@ -24,7 +24,7 @@
 <script type="text/javascript">
     function OpenNewWindow()
     {
-        var txt = '打开的窗口';
+        let txt = '打开的窗口';
         let openedWindow = window.open("about:blank", "", "location=no,status=no,scrollbars=no");
         openedWindow.document.write("<p>" + "<br><br>" + txt + "</p>");
         openedWindow.focus();
