--- a/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/window.html
+++ b/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/window.html
@@ -20,13 +20,13 @@
     <title>WindowEvent</title>
 </head>
 <body>
-<input type="button" value="新窗口中打开网页" onclick="OpenNewWindow()">
+<input type="button" value="新窗口中打开网页" onclick="openNewWindow()">
 <script type="text/javascript">
-    function OpenNewWindow()
+    function openNewWindow()
     {
         let txt = '打开的窗口';
         let openedWindow = window.open("about:blank", "", "location=no,status=no,scrollbars=no");
-        openedWindow.document.write("<p>" + "<br><br>" + txt + "</p>");
+        openedWindow.document.write('<p>' + '<br><br>' + txt + '</p>');
         openedWindow.focus();
     }
 </script>
