渲染Sample仓同源修改
Signed-off-by: DDDDD <dingxin37@huawei.com>

--- a/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/darkModePage.html
+++ b/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/darkModePage.html
@@ -16,20 +16,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name='viewport' content='width=device-width,
-                                    initial-scale=1.0,
-                                    maximum-scale=1.0,
-                                    user-scalable=no'>
-    <style type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <style type="text/css">
+        body { background: LightBlue; color: Black; }
         @media (prefers-color-scheme: dark) {
-            .contentCss{ background:  #000000; color: white; }
-            .hrefCss{ color: #317AF7; }
+            body { background: LightGray; color: Brown; }
         }
     </style>
 </head>
-<body class='contentCss'>
-<div style='text-align:center'>
-    <p>Dark mode debug page</p>
-</div>
+<body class="contentCss">
+  <p>Dark mode debug page</p>
+  <input name="input1" placeholder="please enter text" style="color-scheme: light dark;">
+  <br><br>
+  <input name="input2" placeholder="please enter text">
 </body>
 </html>
