--- a/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/window.html
+++ b/code/DocsSample/ArkWeb/SetBasicAttrsEvts/SetBasicAttrsEvtsOne/entry/src/main/resources/rawfile/window.html
@@ -25,7 +25,7 @@
     function openNewWindow()
     {
         let txt = '打开的窗口';
-        let openedWindow = window.open("about:blank", "", "location=no,status=no,scrollbars=no");
+        let openedWindow = window.open('about:blank', '', 'location=no,status=no,scrollvars=no');
         openedWindow.document.write('<p>' + '<br><br>' + txt + '</p>');
         openedWindow.focus();
     }
