web组件下载能力示例代码同源
Signed-off-by: lianyuanqi <lianyuanqi@h-partners.com>

--- a/code/DocsSample/ArkWeb/ManageWebPageFileIO/entry/src/main/resources/rawfile/index.html
+++ b/code/DocsSample/ArkWeb/ManageWebPageFileIO/entry/src/main/resources/rawfile/index.html
@@ -16,6 +16,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+// 点击视频右下方菜单的下载按钮会触发下载任务。
+<video controls="controls" width="800px" height="580px"
+       src="http://vjs.zencdn.net/v/oceans.mp4"
+       type="video/mp4">
+</video>
 <a href='data:text/html,%3Ch1%3EHello%2C%20World%21%3C%2Fh1%3E' download='download.html'>Download</a>
 </body>
 </html>
