UseFrontendJSApp with samples
Signed-off-by: clear_addr <xurui115@h-partners.com>

--- a/code/DocsSample/ArkWeb/UseFrontendJSApp/entry4/src/main/resources/rawfile/runJS.html
+++ b/code/DocsSample/ArkWeb/UseFrontendJSApp/entry4/src/main/resources/rawfile/runJS.html
@@ -45,26 +45,19 @@
                 return 'objName  test undefined';
           }
 
-          if (window.ndkProxy.method2 === undefined) {
-                document.getElementById('webDemo').innerHTML = 'ndkProxy method2 undefined';
-                return 'objName  test undefined';
-          }
-          window.ndkProxy.method1(
+          let retStr = window.ndkProxy.method1(
             'hello', 'world', [1.2, -3.4, 123.456],
             ['Saab', 'Volvo', 'BMW', undefined],
             1.23456, 123789, true, false, 0, undefined);
+          console.info('ndkProxy and method1 is ok, ' + retStr + ', type:' + typeof(retStr));
           return 'success';
+
     }
 
     function testNdkProxyObjMethod2() {
           if (window.ndkProxy === undefined) {
                 document.getElementById('webDemo').innerHTML = 'ndkProxy undefined';
                 return 'objName undefined';
-          }
-
-          if (window.ndkProxy.method1 === undefined) {
-                document.getElementById('webDemo').innerHTML = 'ndkProxy method1 undefined';
-                return 'objName  test undefined';
           }
 
           if (window.ndkProxy.method2 === undefined) {
@@ -80,7 +73,8 @@
         let cars = [student, 456, false, 4.567];
         let params = '[\'{\\\'scope\\\']';
 
-        window.ndkProxy.method2('hello', 'world', false, cars, params);
+        let retStr = window.ndkProxy.method2('hello', 'world', false, cars, params);
+        console.info('ndkProxy and method2 is ok, ' + retStr + ', type:' + typeof(retStr));
         return 'success';
     }
 
