--- a/code/DocsSample/ArkWeb/UsingWebMultimedia/entry/src/main/resources/rawfile/index.html
+++ b/code/DocsSample/ArkWeb/UsingWebMultimedia/entry/src/main/resources/rawfile/index.html
@@ -39,7 +39,7 @@
       video.srcObject = MediaStream;
       video.play();
     }).catch(function(err) {
-  	  console.info(err.name + ": " + err.message);
+  	  console.info(err.name + ': ' + err.message);
     });
   }
 </script>
