--- a/code/DocsSample/ArkWeb/UsingWebMultimedia/entry/src/main/resources/rawfile/index.html
+++ b/code/DocsSample/ArkWeb/UsingWebMultimedia/entry/src/main/resources/rawfile/index.html
@@ -31,7 +31,7 @@
       audio: true
     };
     // 获取video摄像头区域
-    let video = document.getElementById("video");
+    let video = document.getElementById('video');
     // 返回的Promise对象
     let promise = navigator.mediaDevices.getUserMedia(constraints);
     // then()异步，调用MediaStream对象作为参数
