add html sample code lable
Signed-off-by: hexu28huawei <hexu28@huawei.com>

--- a/code/DocsSample/ArkWeb/WebDragInteraction/entry/src/main/resources/rawfile/w3c-forbid.html
+++ b/code/DocsSample/ArkWeb/WebDragInteraction/entry/src/main/resources/rawfile/w3c-forbid.html
@@ -1,4 +1,5 @@
 <!-- w3c-forbid.html -->
+// [Start W3cForbidDragPage]
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -58,3 +59,4 @@
 
 </body>
 </html>
+// [End W3cForbidDragPage]
