--- a/code/DocsSample/ArkWeb/WebDragInteraction/entry/src/main/resources/rawfile/runJs-forbid.html
+++ b/code/DocsSample/ArkWeb/WebDragInteraction/entry/src/main/resources/rawfile/runJs-forbid.html
@@ -1,4 +1,5 @@
 <!-- runJs-forbid.html -->
+// [Start RunJsForbidDragPage]
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -29,3 +30,4 @@
 
 </body>
 </html>
+// [End RunJsForbidDragPage]
